style icons section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,49 +3,29 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
+    font-size: 1.05em;
 }
 .container {
     width: 60%;
     margin: auto;
 }
+.content {
+    padding: 0 1em 0 0;
+}
 .icons {
     display: flex;
     justify-content: space-between;
 }
-
-.form {
-    width: 100%;
-    /* padding: auto; */
-    margin-top: 10px;
+.likes {
+    display: flex;
+    justify-content: space-between;
 }
-.comments {
-    display: none;
+.likes p {
+    margin: 0 1rem 0 0;
 }
-.comment {
-    width: 80%;
-    border: none;
-    border-bottom: 1px solid grey;
-    font-size: 0.8rem;
-}
-.comment:focus {
-    outline: none;
-}
-.comment-button {
-    width: 10%;
-    border: none;
-    font-size: 0.8rem;
-    font-weight: 600;
-    color: rgb(92, 114, 238);
+.fa-regular {
     cursor: pointer;
-    transition: color 300ms;
 }
-.comment-button:hover {
-    color: rgb(37, 68, 245);
+.fa-regular:hover {
+    color: blue;
 }
-  
-.comment-button:active {
-   color: rgb(127, 146, 250);
-}
-.comment-button:focus {
-    outline: none;
-} 
