add submit section styles

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,3 +29,26 @@ body {
 .fa-regular:hover {
     color: blue;
 }
+
+/* Ask Question Section */
+.submit {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    height: 8vh;
+    margin-bottom: 10px;
+}
+
+.icon {
+    padding: 1em;
+}
+
+.question {
+    background-color: rgb(170, 170, 170, 0.12);
+    padding: 10px 10px 10px 20px;
+    width: 80%;
+    border-radius: 10px;
+    cursor: pointer;
+}
