--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,3 +52,80 @@ body {
     border-radius: 10px;
     cursor: pointer;
 }
+
+/* Modal Form */
+.modal {
+    position: fixed;
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(168, 168, 163, 0.9); /* Fallback color */
+}
+
+.modal-content {
+    background-color: white;
+    width: 50%;
+    margin: auto;
+    border: 1px solid #aaaaaa;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.close {
+    color: #aaaaaa;
+    font-size: 24px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Form in the Modal */
+form {
+    width: 100%;
+    padding: inherit;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+.input-group input:focus {
+    outline: 0;
+}
+
+input[type="textarea"]{
+    height: 4em;
+}
+
+input[type="submit"]{
+    width: auto;
+    border: none;
+    padding: 8px 10px;
+    border-radius: 10px;
+    background-color:blue;
+    color: white;
+}
+
+.btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
