--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,3 +129,26 @@ input[type="submit"]{
     flex-direction: row;
     justify-content: space-between;
 }
+
+/* Comment Section Styling */
+#comments {
+    margin-top: 1em;
+    width: 100%;
+    display: none;
+}
+
+.comment-form {
+    width: 100%;
+    margin-bottom: 0.5em;
+}
+
+#comment {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+#comment:focus {
+    outline: none;
+}
