--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -132,7 +132,7 @@ input[type="submit"]{
 
 /* Comment Section Styling */
 #comments {
-    margin-top: 1em;
+    margin: 1em 0 2em 0;
     width: 100%;
     display: none;
 }
