--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@ body {
     font-size: 1.01em;
 }
 .container {
-    width: 60%;
+    width: 40%;
     margin: auto;
 }
 .content {
@@ -28,6 +28,15 @@ body {
 }
 .fa-regular:hover {
     color: blue;
+}
+
+.image {
+    width: 100%;
+}
+
+.image img {
+    width: 100%;
+    height: 400px;
 }
 
 /* Comment Item Styling */
@@ -112,7 +121,7 @@ form {
 
 input {
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #aaaaaa;
 }
 
 .input-group input:focus {
@@ -129,6 +138,15 @@ input[type="submit"]{
     padding: 8px 10px;
     border-radius: 10px;
     background-color:blue;
+    color: white;
+}
+
+input[type="reset"]{
+    width: auto;
+    border: none;
+    padding: 8px 10px;
+    border-radius: 10px;
+    background-color:red;
     color: white;
 }
 
