--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,47 @@ body {
     padding: 0 1em 0 0;
     margin-bottom: 4em;
 }
+ /* Title Section */
+ .heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Dropdown section */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+    padding: 12px;
+    border-radius: 5px;
+}
+
+.dropdown-content div {
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* End of title section */
+.material-icons {
+    cursor: pointer;
+}
+
+.material-icons:hover {
+    font-size: 28px;
+}
 .icons {
     display: flex;
     justify-content: space-between;
