--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -108,7 +108,7 @@ body {
 .question {
     background-color: rgb(170, 170, 170, 0.12);
     padding: 8px 8px 8px 20px;
-    width: 100%;
+    width: 85%;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -220,4 +220,70 @@ input[type="reset"]{
 
 #comment:focus {
     outline: none;
+}
+
+/* Media Queries */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 80%;
+        margin: auto;
+        font-size: .9em;
+    }
+    .image img {
+        width: 100%;
+        height: 200px;
+        /* border-radius: 5px; */
+    }
+    .question {
+        background-color: rgb(170, 170, 170, 0.12);
+        padding: 6px 4px 6px 20px;
+        width: 80%;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .container {
+        width: 80%;
+        margin: auto;
+    }
+    .image img {
+        width: 100%;
+        height: 300px;
+        /* border-radius: 5px; */
+    }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .container {
+        width: 70%;
+        margin: auto;
+    }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 900px) {
+    .container {
+        width: 70%;
+        margin: auto;
+    }
+    .image img {
+        width: 100%;
+        height: 360px;
+        /* border-radius: 5px; */
+    }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1100px) {
+    .container {
+        width: 60%;
+        margin: auto;
+    }
+    .image img {
+        width: 100%;
+        height: 400px;
+        /* border-radius: 5px; */
+    }
 }
